# test-uml

./: CMakeLists.txt  Makefile  ReadMe.md  conanfile.txt  install.sh  test.drawio
Client/Include/: Background.hpp  Button.hpp  Game.hpp  Image.hpp  Io_Service.hpp  Io_Service_Work.hpp  Music.hpp  Paralax.hpp  Queue.hpp  Text_Field.hpp  Timer.hpp  Window.hpp
Client/Include/Constants/: Constants.hpp
Client/Include/Network/: UDP_Client.hpp
Client/Include/Network/Stream_Buffer/: A_Stream_Buffer.hpp  UDP_Client_Stream_Buffer.hpp  UDP_Server_Stream_Buffer.hpp
Client/Sources/: Background.cpp  Button.cpp  Game.cpp  Image.cpp  Music.cpp  Paralax.cpp  Text_Field.cpp  Timer.cpp  Window.cpp  main.cpp
Client/Sources/Network/: UDP_Client.cpp
Client/Sources/Network/Stream_Buffer/: A_Stream_Buffer.cpp  UDP_Client_Stream_Buffer.cpp  UDP_Server_Stream_Buffer.cpp
documentation/: game_engine.md  server_commands.md
server/: GameLoop.cpp  Timer.cpp  main.cpp  server.cpp
server/Ecs/: AISystem.cpp  Entity.cpp  EntityManager.cpp  PlayerSystem.cpp  Sending.cpp  WeaponSystem.cpp
server/Ecs/Components/: Acceleration.cpp  Damages.cpp  Drawable.cpp  Health.cpp  HitBox.cpp  Position.cpp
server/gameEntities/: Lobby.cpp  LobbyManager.cpp  Player.cpp
server/includes/: AISystem.hpp  ASystem.hpp  Entity.hpp  EntityManager.hpp  GameLoop.hpp  ISystem.hpp  Lobby.hpp  LobbyManager.hpp  Player.hpp  PlayerSystem.hpp  Sending.hpp  Timer.hpp  TypeEnum.hpp  WeaponSystem.hpp  server.hpp
server/includes/Components/: AComponent.hpp  AI.hpp  Acceleration.hpp  Damages.hpp  Drawable.hpp  Health.hpp  HitBox.hpp  IComponent.hpp  Position.hpp  Weapon.hpp
